# m3u8DownloaderForMmf

./: LICENSE  README.md  cli_main.py  deploy.bat  deploy.sh  enhanced_main.py  main.py  manager.py  project_docs.md  pyproject.toml  setup_weiyun.py  simple_m3u8.py  simple_main.py  start.py  test.py  test_cover_download.py  test_data.json  test_duplicate_detection.py  test_fixed_download.py  test_m3u8_download.py  test_ssl_fix.py  test_title_extraction.py
data/: simple_m3u8.db
data/models/: DataModels.py  FeedModels.py
video_downloader/: __init__.py  simple_m3u8.db
video_downloader/api/: __init__.py  client.py  feed_parser.py  memefans_client.py
video_downloader/cloud/: __init__.py  cloud_manager.py  jianguoyun_client.py
video_downloader/core/: __init__.py  cli_app.py  config.py  enhanced_app.py  logger.py  main.py
video_downloader/data/: video_downloader.db
video_downloader/database/: __init__.py  manager.py  models.py
video_downloader/download/: __init__.py  manager.py
video_downloader/scheduler/: __init__.py  memefans_scheduler.py
video_downloader/security/: __init__.py
video_downloader/temp/: import jwt.py
video_downloader/ui/: __init__.py  interface.py
video_downloader/utils/: __init__.py  data_processor.py  enhanced_json_parser.py  file_manager.py
