[tool.poetry]
name = "video_downloader_for_memefans"
version = "0.1.0"
description = ""
authors = ["冰冻芋头 <aliverccforward@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
m3u8 = "^6.0.0"
moviepy = "^2.2.1"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
