[tool.poetry]
name = "m3u8DownloaderForMmf"
version = "1.3.2"
description = "视频下载器 - 支持定时运行、数据库管理、重复检测和网盘推送"
authors = ["冰冻芋头 <m3u8DownloaderForMmf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
m3u8 = "^6.0.0"
jwt = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
